// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Badge LargeActiveIcon should match snapshot 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "transparent",
        "flex": 1,
      },
      {
        "backgroundColor": "white",
      },
    ]
  }
  testID="addon-backgrounds-container"
>
  <View
    style={
      {
        "padding": 16,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#347e3e",
            "borderRadius": 999,
            "justifyContent": "center",
          },
          {
            "height": 32,
            "padding": 8,
            "width": 32,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "height": 16,
            "justifyContent": "center",
            "width": 16,
          }
        }
      >
        <View
          accessibilityRole="image"
          accessible={true}
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`Badge LargeActiveNone should match snapshot 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "transparent",
        "flex": 1,
      },
      {
        "backgroundColor": "white",
      },
    ]
  }
  testID="addon-backgrounds-container"
>
  <View
    style={
      {
        "padding": 16,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#347e3e",
            "borderRadius": 999,
            "justifyContent": "center",
          },
          {
            "height": 32,
            "padding": 8,
            "width": 32,
          },
          undefined,
        ]
      }
    />
  </View>
</View>
`;

exports[`Badge LargeActiveNumber should match snapshot 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "transparent",
        "flex": 1,
      },
      {
        "backgroundColor": "white",
      },
    ]
  }
  testID="addon-backgrounds-container"
>
  <View
    style={
      {
        "padding": 16,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#347e3e",
            "borderRadius": 999,
            "justifyContent": "center",
          },
          {
            "height": 32,
            "padding": 8,
            "width": 32,
          },
          undefined,
        ]
      }
    >
      <Text
        style={
          [
            {
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "400",
              "letterSpacing": 0.20000000298023224,
              "lineHeight": 17.5,
            },
            {
              "color": "#fffefd",
              "textAlign": "center",
            },
          ]
        }
      >
        1
      </Text>
    </View>
  </View>
</View>
`;

exports[`Badge LargeDisabledIcon should match snapshot 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "transparent",
        "flex": 1,
      },
      {
        "backgroundColor": "white",
      },
    ]
  }
  testID="addon-backgrounds-container"
>
  <View
    style={
      {
        "padding": 16,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#347e3e",
            "borderRadius": 999,
            "justifyContent": "center",
          },
          {
            "height": 32,
            "padding": 8,
            "width": 32,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "backgroundColor": "rgba(255, 255, 255, 0.8)",
            },
          ]
        }
      />
      <View
        style={
          {
            "alignItems": "center",
            "height": 16,
            "justifyContent": "center",
            "width": 16,
          }
        }
      >
        <View
          accessibilityRole="image"
          accessible={true}
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`Badge LargeDisabledNone should match snapshot 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "transparent",
        "flex": 1,
      },
      {
        "backgroundColor": "white",
      },
    ]
  }
  testID="addon-backgrounds-container"
>
  <View
    style={
      {
        "padding": 16,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#347e3e",
            "borderRadius": 999,
            "justifyContent": "center",
          },
          {
            "height": 32,
            "padding": 8,
            "width": 32,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "backgroundColor": "rgba(255, 255, 255, 0.8)",
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`Badge LargeDisabledNumber should match snapshot 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "transparent",
        "flex": 1,
      },
      {
        "backgroundColor": "white",
      },
    ]
  }
  testID="addon-backgrounds-container"
>
  <View
    style={
      {
        "padding": 16,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#347e3e",
            "borderRadius": 999,
            "justifyContent": "center",
          },
          {
            "height": 32,
            "padding": 8,
            "width": 32,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "backgroundColor": "rgba(255, 255, 255, 0.8)",
            },
          ]
        }
      />
      <Text
        style={
          [
            {
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "400",
              "letterSpacing": 0.20000000298023224,
              "lineHeight": 17.5,
            },
            {
              "color": "#fffefd",
              "textAlign": "center",
            },
          ]
        }
      >
        1
      </Text>
    </View>
  </View>
</View>
`;

exports[`Badge SmallActive should match snapshot 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "transparent",
        "flex": 1,
      },
      {
        "backgroundColor": "white",
      },
    ]
  }
  testID="addon-backgrounds-container"
>
  <View
    style={
      {
        "padding": 16,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#347e3e",
            "borderRadius": 999,
            "justifyContent": "center",
          },
          {
            "height": 16,
            "width": 16,
          },
          undefined,
        ]
      }
    />
  </View>
</View>
`;

exports[`Badge SmallDisabled should match snapshot 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "transparent",
        "flex": 1,
      },
      {
        "backgroundColor": "white",
      },
    ]
  }
  testID="addon-backgrounds-container"
>
  <View
    style={
      {
        "padding": 16,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#347e3e",
            "borderRadius": 999,
            "justifyContent": "center",
          },
          {
            "height": 16,
            "width": 16,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "backgroundColor": "rgba(255, 255, 255, 0.8)",
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;
